--- a/private/skins/biscuit/templates/upload.twig
+++ b/private/skins/biscuit/templates/upload.twig
@@ -39,14 +39,9 @@
                                 <input class="form-submit" type="file" name="fileToUpload" id="fileToUpload" required>
                             </div>
 
-                            <div class="form-input">
-                                <label for="rating">Select audience rating (required):</label>
-
-                                <select class="form-submit" name="rating" id="rating" required>
-                                    <option value="general">General</option>
-                                    <option value="questionable">Questionable</option>
-                                    <option value="mature">Mature</option>
-                                </select>
+                            <div class="form-submit">
+                                <input type="checkbox" name="rating" id="rating" value="true">
+                                <label for="rating"> Is sensitive?</label><br>
                             </div>
 
                             <div class="form-button-container">
