--- a/private/skins/biscuit/templates/register.twig
+++ b/private/skins/biscuit/templates/register.twig
@@ -5,33 +5,33 @@
 	{% block content %}
         <div class="section">
             <div class="section-title">
-                <h1>Register a {{ website_branding.name }} account</h1>
+                <h1>Register</h1>
             </div>
             <div class="content-box">
                 <div class="panel-body">
                     <form method="post" name="loginForm" id="loginForm" action="register" class="form-signin">
-                        <div>
+                        <div class="form-input">
                             <label for="email">Email address:</label>
                             <input type="email" name="email" class="form-submit">
                         </div>
 
-                        <div>
+                        <div class="form-input">
                             <label for="username">Username:</label>
                             <input type="text" name="username" class="form-submit">
                         </div>
 
-                        <div>
+                        <div class="form-input">
                             <label for="pass1">Password:</label>
                             <input type="password" name="pass1" class="form-submit">
                         </div>
 
-                        <div>
+                        <div class="form-input">
                             <label for="pass2">Password (confirm):</label>
                             <input type="password" name="pass2" class="form-submit">
                         </div>
 
                         {% if invite_keys_enabled %}
-                        <div>
+                        <div class="form-input">
                             <label for="invite">Invite key:</label>
                             <input type="text" name="invite" class="form-submit">
                         </div>
