readd bootstrap frontend for the Funny

--- a/private/skins/biscuit/templates/_layout.twig
+++ b/private/skins/biscuit/templates/_layout.twig
@@ -65,7 +65,7 @@
 </div>
 {% block scripts %}{% endblock %}
 {# yes #}
-<script src="/assets/common_new.js?r={{ get_css_file_date() }}"></script>
+<script src="/assets/common_biscuit.js?r={{ get_css_file_date() }}"></script>
 <!-- {{ version_banner() }} -->
 </body>
 </html>
