--- a/private/skins/biscuit/templates/components/default/footer.twig
+++ b/private/skins/biscuit/templates/components/default/footer.twig
@@ -2,7 +2,9 @@
     <div class="footer-container">
         <img src="/assets/opensb_logo.png" alt="OpenSB Logo">
         <p>© 2021-{{ 'now' | date('Y') }} OpenSB contributors.
-            <span aria-hidden="true">|</span> <a href="/privacy">Privacy policy</a></p>
+            <span aria-hidden="true">|</span> <a href="/theme">Change theme</a>
+            <span aria-hidden="true">|</span> <a href="/privacy">Privacy policy</a>
+        </p>
         <p>Running <a href="/version">OpenSB {{ opensb_version }}</a></p>
         {% if is_debug %}
             <p>{{ profiler_stats() }}</p>
