--- a/private/skins/bootstrap/templates/admin.twig
+++ b/private/skins/bootstrap/templates/admin.twig
@@ -1,9 +1,9 @@
 {% extends "_layout-admin.twig" %}
 
-{% block title %}{{ __("Admin") }}{% endblock %}
+{% block title %}Admin{% endblock %}
 
 	{% block content %}
-		<p>
-			Please use the Biscuit frontend for any administration duties.
-		</p>
-	{% endblock %}
+        <p>
+            Please use the Biscuit frontend for any administration duties.
+        </p>
+    {% endblock %}
