--- a/private/skins/bootstrap/templates/search.twig
+++ b/private/skins/bootstrap/templates/search.twig
@@ -1,12 +1,12 @@
 {% extends "_layout.twig" %}
 
-{% block title %}{{ __("Search Results for %s", [query]) }}{% endblock %}
+{% block title %}Search Results for %s", [query]) }}{% endblock %}
 
 	{% block content %}
-<h3>{{ __("Search Results for %s", [query]) }}</h3>
-{% for video in videos %}
-	{{ video_box(video) }}
-{% else %}
-	<p>{{ __("No search results found.") }}</p>
-{% endfor %}
-	{% endblock %}
+        <h3>Search Results for %s", [query]) }}</h3>
+        {% for video in videos %}
+            {{ video_box(video) }}
+        {% else %}
+            <p>No search results found.</p>
+        {% endfor %}
+    {% endblock %}
