--- a/scss/bootstrap/_signin.scss
+++ b/scss/bootstrap/_signin.scss
@@ -3,10 +3,7 @@ body.signin {
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-image: url("/assets/login.png");
-  background-position: center;
-  background-attachment: fixed;
-  background-color: #324270;
+  background: #FF8A00 radial-gradient(circle, rgba(255, 178, 88, 1) 0%, rgba(255, 138, 0, 1) 100%);
   height: 100%;
 }
 
