--- a/scss/bootstrap/_variables.scss
+++ b/scss/bootstrap/_variables.scss
@@ -44,6 +44,7 @@ $body-bg: #f0f0f0;
 // fix for bootstrap 5.3
 $card-bg: #ffffff;
 $dropdown-bg: #ffffff;
+$table-bg: #ffffff;
 // end fix
 
 $alert-bg-scale: 0%;
