--- a/scss/bootstrap/bootstrap.scss
+++ b/scss/bootstrap/bootstrap.scss
@@ -1,9 +1,13 @@
+// google fonts inter is outdated
+@import url('https://rsms.me/inter/inter.css');
+
+// bootstrap icons
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 // custom variables
 @import "variables";
 
-// bootstrap stuff
+// bootstrap
 @import "../../vendor/twbs/bootstrap/scss/bootstrap.scss";
 
 // custom stuff
