--- a/private/skins/bootstrap/templates/write_journal.twig
+++ b/private/skins/bootstrap/templates/write_journal.twig
@@ -7,7 +7,7 @@
             <div class="alert alert-primary">As you can tell, this page is not complete</div>
             <h3>Write a Forum Thread (PLACEHOLDER PAGE)</h3>
             <div class="col-8">
-                <form name="uploadForm" id="uploadForm" method="post" action="post"
+                <form name="uploadForm" id="uploadForm" method="post" action="write"
                       enctype="multipart/form-data">
                     <br>
 
