--- a/private/skins/bootstrap/templates/components/videobox.twig
+++ b/private/skins/bootstrap/templates/components/videobox.twig
@@ -12,7 +12,7 @@
                 <h3><a href="/view/{{ data.video_id }}">{{ data.title }}</a></h3>
                 {# hack to prevent twig from outputing the number 1 #}
                 {% if data.views != 1 %}
-                    {% set pluralViews = __("s") %}
+                    {% set pluralViews = "s" %}
                 {% endif %}
                 <p>{{ userlink(data, 'u_') }} &bull; {{ data.views }} view%s", [pluralViews]) }} &bull;
                     <span class="text-muted">{{ data.time | relative_time }}</span></p>
