--- a/private/skins/bootstrap/templates/_layout.twig
+++ b/private/skins/bootstrap/templates/_layout.twig
@@ -28,88 +28,11 @@
     <title>{% block title %}{% endblock %} - {{ website_branding.name }}</title>
 </head>
 <body>
-<nav id="navbar"
-     class="navbar navbar-light bg-light navbar-static-top navbar-expand-md">
-    <div class="container">
-        <a class="navbar-brand" href="/"><img src="{{ website_branding.assets_location }}/logo.png" alt="[sb]"
-                                              height="32"
-                                              class="d-inline-block align-text-top"></a>
-        <form class="d-flex" method="GET" action="search">
-            <div class="input-group">
-                <span class="input-group-text" id="basic-addon1">{{ icon('search', 16 ) }}</span>
-                <input name="query" class="form-control" type="search" placeholder="Search"
-                       aria-label="Search">
-            </div>
-        </form>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div id="navbarCollapse" class="collapse navbar-collapse">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
-            <ul class="navbar-nav">
-                {% if is_user_logged_in %}
-                    <!-- can't put dropdown-toggle properly wtf -->
-                    <li class="nav-item">
-                        <a href="/upload" class="nav-link">
-                            <div class="d-flex align-items-center">
-                                {{ icon('plus', 24) }}
-                                <span class="pe-1">Upload</span>
-                            </div>
-                        </a>
-                    </li>
-                {% else %}
-                    <div class="d-grid gap-2 d-md-block">
-                        <a href="/login" class="btn btn-primary me-md-1">Login</a>
-                        <a href="/register" class="btn btn-secondary">Register</a>
-                    </div>
-                {% endif %}
-                {% if is_user_logged_in %}
-                    <div class="dropdown">
-                        <li class="nav-item">
-                            <style>
-                                #openSettings.nav-link {
-                                    padding: 0.25rem;
-                                }
-                            </style>
-                            <a href="/#" id="openSettings" class="dropdown-toggle nav-link" data-bs-toggle="dropdown"
-                               aria-expanded="false">
-                                <img src="{{ profile_picture(user_data.name) }}"
-                                     alt="{{ user_data.name }}" class="rounded-circle" width="30" height="30">
-                            </a>
-                        </li>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown" id="mainMenu">
-                            <li><a class="dropdown-item" href="/settings">{{ icon('tools', 16) }} Settings</a></li>
-                            <li><a class="dropdown-item"
-                                   href="/user/{{ user_data.name }}">{{ icon('person-lines-fill', 16) }} My profile</a>
-                            </li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="/logout">{{ icon('door-open', 16) }} Sign off</a></li>
-
-                        </ul>
-                    </div>
-                {% endif %}
-            </ul>
-        </div>
-        <!--/.nav-collapse -->
-    </div>
-</nav>
-<div class="mb-4">
-    <nav class="py-1 bg-dark">
-        <div class="container">
-            <ul class="nav me-auto">
-                <li class="nav-item"><a href="/" class="nav-link link-light px-2">{{ icon('house-door', 16) }} Home</a>
-                </li>
-                <li class="nav-item"><a href="/browse" class="nav-link link-light px-2">{{ icon('play-btn', 16) }}
-                        Browse</a></li>
-                <li class="nav-item"><a href="/users" class="nav-link link-light px-2">{{ icon('people', 16) }}
-                        Members</a></li>
-            </ul>
-        </div>
-    </nav>
-</div>
+{% if current_theme == "virtue" %}
+    {{ include('/components/_header_virtue.twig') }}
+{% else %}
+    {{ include('/components/_header_default.twig') }}
+{% endif %}
 {% block precontent %}{% endblock %}
 <div class="container">
     {% if session.notif_message %}
@@ -120,28 +43,12 @@
     {% endif %}
     {% block content %}{% endblock %}
 </div>
-<footer class="p-3">
-    <div class="container">
-        <div class="card">
-            <div class="card-body">
-                <h4 class="my-0">OpenSB {{ opensb_version }}</h4>
-                <p class="my-0">© 2021-{{ 'now' | date('Y') }} OpenSB contributors</p>
-                <p class="my-0">
-                    <a href="/version" class="me-1">About</a>
-                    <a href="/privacy" class="me-1">Privacy policy</a>
-                    <a href="/theme" class="me-1">Change theme</a>
-                </p>
-                {% if is_debug %}
-                    <p class="my-0">{{ profiler_stats() }}</p>
-                {% endif %}
-                {% if is_chaziz_sb %}
-                    <p class="my-0"><small>A <a href="https://bluffingo.net/">Chaziz</a> Project.</small></p>
-                {% endif %}
-            </div>
-        </div>
-</footer>
+{% if current_theme == "virtue" %}
+    {{ include('/components/_footer_virtue.twig') }}
+{% else %}
+    {{ include('/components/_footer_default.twig') }}
+{% endif %}
 {% block postcontent %}{% endblock %}
-</div>
 {% block scripts %}{% endblock %}
 </body>
 </html>
