--- a/private/skins/bootstrap/templates/components/browsevideobox.twig
+++ b/private/skins/bootstrap/templates/components/browsevideobox.twig
@@ -14,7 +14,7 @@
                 {% if submission.views != 1 %}
                     {% set pluralViews = "s" %}
                 {% endif %}
-                <p>{{ user_link(submission.author) }} &bull; {{ submission.views }} view%s", [pluralViews]) }} &bull;
+                <p>{{ user_link(submission.author) }} &bull; {{ submission.views }} view{{pluralViews}} &bull;
                     {{ submission.published | relative_time }}</p>
             </div>
         </div>
