--- a/scss/bootstrap/bootstrap.scss
+++ b/scss/bootstrap/bootstrap.scss
@@ -2,7 +2,8 @@
 @import url('https://rsms.me/inter/inter.css');
 
 // bootstrap icons
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+$bootstrap-icons-font-dir: "/assets" !default;
+@import "../../vendor/twbs/bootstrap-icons/font/bootstrap-icons.scss";
 
 // custom variables
 @import "variables";
